--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="menu list">
             <li class="menu-item">
+              <div class="advantages-items">
+                <svg class="" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-Group1"></use>
+                </svg>
+              </div>
               <h3 class="caption">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
@@ -147,6 +152,36 @@
 
               <h3 class="caption caption-team">Mark Guerrero</h3>
               <p class="text-team">Product Designer</p>
+              <ul class="social-list-employees list">
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="employees-card">
               <img
@@ -157,6 +192,36 @@
               />
               <h3 class="caption caption-team">Tom Ford</h3>
               <p class="text-team">Frontend Developer</p>
+              <ul class="social-list-employees list">
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="employees-card">
               <img
@@ -167,6 +232,36 @@
               />
               <h3 class="caption caption-team">Camila Garcia</h3>
               <p class="text-team">Marketing</p>
+              <ul class="social-list-employees list">
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="employees-card">
               <img
@@ -177,6 +272,36 @@
               />
               <h3 class="caption caption-team">Daniel Wilson</h3>
               <p class="text-team">UI Designer</p>
+              <ul class="social-list-employees list">
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="employees">
+                  <a href="" class="social-link link">
+                    <svg class="social-icon" width="20" weight="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -184,14 +309,49 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href="./index.html">
-          WEB<span class="color-logo-footer">STUDIO</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-items container">
+        <div class="web-footer">
+          <a class="logo-footer link" href="./index.html">
+            WEB<span class="color-logo-footer">STUDIO</span></a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="text-footer-media">Social media</p>
+          <ul class="social-list-footer list">
+            <li class="employees">
+              <a href="" class="social-link-footer link">
+                <svg class="social-icon" width="20" weight="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="employees">
+              <a href="" class="social-link-footer link" width="34" weight="40">
+                <svg class="social-icon" width="20" weight="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="employees">
+              <a href="" class="social-link-footer link">
+                <svg class="social-icon" width="20" weight="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="employees">
+              <a href="" class="social-link-footer link">
+                <svg class="social-icon" width="20" weight="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
