--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li class="menu-item">
               <div class="advantages-items">
                 <svg class="" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-Group1"></use>
+                  <use href="./images/symbol-defs.svg#icon-Group"></use>
                 </svg>
               </div>
               <h3 class="caption">Strategy</h3>
@@ -86,6 +86,11 @@
               </p>
             </li>
             <li class="menu-item">
+              <div class="advantages-items">
+                <svg class="" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="caption">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
@@ -93,6 +98,11 @@
               </p>
             </li>
             <li class="menu-item">
+              <div class="advantages-items">
+                <svg class="" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="caption">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
@@ -100,6 +110,11 @@
               </p>
             </li>
             <li class="menu-item">
+              <div class="advantages-items">
+                <svg class="" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="caption">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -296,7 +311,12 @@
                 </li>
                 <li class="employees">
                   <a href="" class="social-link link">
-                    <svg class="social-icon" width="20" weight="20">
+                    <svg
+                      class="social-icon"
+                      width="20"
+                      weight="20"
+                      color="white"
+                    >
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
