Start to make customers
Start to make customers

--- a/index.html
+++ b/index.html
@@ -311,17 +311,63 @@
                 </li>
                 <li class="employees">
                   <a href="" class="social-link link">
-                    <svg
-                      class="social-icon"
-                      width="20"
-                      weight="20"
-                      color="white"
-                    >
+                    <svg class="social-icon" width="20" weight="20">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
               </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Section 5 -->
+
+      <section class="section">
+        <div class="customers container">
+          <h2 class="caption-customers">Customers</h2>
+          <ul class="customers-list list">
+            <li class="menu-item customers-menu list">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="41" weight="46.97">
+                  <use href="./images/symbol-defs.svg#icon-group0"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-item customers-menu list">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="40" weight="52">
+                  <use href="./images/symbol-defs.svg#icon-group1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-item customers-menu list">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="41" weight="46.97">
+                  <use href="./images/symbol-defs.svg#icon-group2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-item customers-menu list">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="84" weight="41">
+                  <use href="./images/symbol-defs.svg#icon-group3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item customers-menu list">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="63" weight="45">
+                  <use href="./images/symbol-defs.svg#icon-group4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item customers-menu list">
+              <a href="" class="customers-link link">
+                <svg class="customers-icon" width="94" weight="44">
+                  <use href="./images/symbol-defs.svg#icon-group5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
