Finish all hover, focus, border shadovs
Finish all hover, focus, border shadovs

--- a/index.html
+++ b/index.html
@@ -323,49 +323,49 @@
       </section>
       <!-- Section 5 -->
 
-      <section class="section">
-        <div class="customers container">
+      <section class="customers section">
+        <div class="container">
           <h2 class="caption-customers">Customers</h2>
           <ul class="customers-list list">
-            <li class="menu-item customers-menu list">
+            <li class="customers-item list">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" width="41" weight="46.97">
-                  <use href="./images/symbol-defs.svg#icon-group0"></use>
+                <svg class="customers-icon" width="104" weight="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo0"></use>
                 </svg>
               </a>
             </li>
-            <li class="menu-item customers-menu list">
+            <li class="customers-item list">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" width="40" weight="52">
-                  <use href="./images/symbol-defs.svg#icon-group1"></use>
+                <svg class="customers-icon" width="104" weight="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
-            <li class="menu-item customers-menu list">
+            <li class="customers-item list">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" width="41" weight="46.97">
-                  <use href="./images/symbol-defs.svg#icon-group2"></use>
+                <svg class="customers-icon" width="104" weight="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
-            <li class="menu-item customers-menu list">
+            <li class="customers-item list">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" width="84" weight="41">
-                  <use href="./images/symbol-defs.svg#icon-group3"></use>
+                <svg class="customers-icon" width="104" weight="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
-            <li class="customers-item customers-menu list">
+            <li class="customers-item list">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" width="63" weight="45">
-                  <use href="./images/symbol-defs.svg#icon-group4"></use>
+                <svg class="customers-icon" width="104" weight="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
-            <li class="customers-item customers-menu list">
+            <li class="customers-item list">
               <a href="" class="customers-link link">
-                <svg class="customers-icon" width="94" weight="44">
-                  <use href="./images/symbol-defs.svg#icon-group5"></use>
+                <svg class="customers-icon" width="104" weight="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
