--- a/portfolio.html
+++ b/portfolio.html
@@ -217,14 +217,54 @@
       <!-- Footer -->
 
       <footer class="footer">
-        <div class="container">
-          <a class="logo-footer link" href="./index.html">
-            WEB<span class="color-logo-footer">STUDIO</span></a
-          >
-          <p class="text-footer">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+        <div class="footer-items container">
+          <div class="web-footer">
+            <a class="logo-footer link" href="./index.html">
+              WEB<span class="color-logo-footer">STUDIO</span></a
+            >
+            <p class="text-footer">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social-media">
+            <p class="text-footer-media">Social media</p>
+            <ul class="social-list-footer list">
+              <li class="employees">
+                <a href="" class="social-link-footer link">
+                  <svg class="social-icon" width="20" weight="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="employees">
+                <a
+                  href=""
+                  class="social-link-footer link"
+                  width="34"
+                  weight="40"
+                >
+                  <svg class="social-icon" width="20" weight="20">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="employees">
+                <a href="" class="social-link-footer link">
+                  <svg class="social-icon" width="20" weight="20">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="employees">
+                <a href="" class="social-link-footer link">
+                  <svg class="social-icon" width="20" weight="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </footer>
     </main>
