--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
+
         <div class="social-media">
           <p class="text-footer-media">Social media</p>
           <ul class="social-list-footer list">
@@ -396,7 +397,7 @@
               </a>
             </li>
             <li class="employees">
-              <a href="" class="social-link-footer link" width="34" weight="40">
+              <a href="" class="social-link-footer link">
                 <svg class="social-icon" width="20" weight="20">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
