--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
               </a>
             </li>
             <li class="menu-item-cards">
-              <a class="link" href="">
+              <a class="link servise-cards" href="">
                 <img
                   src="./images/img(1)(1).jpg"
                   alt="Cashless Payment"
@@ -112,7 +112,7 @@
               >
             </li>
             <li class="menu-item-cards">
-              <a class="link" href="">
+              <a class="link servise-cards" href="">
                 <img
                   src="./images/ProjectCard(2).jpg"
                   alt="Meditaion App"
@@ -126,7 +126,7 @@
               >
             </li>
             <li class="menu-item-cards">
-              <a class="link" href=""
+              <a class="link servise-cards" href=""
                 ><img
                   src="./images/a2.jpg"
                   alt="Taxi Service"
@@ -140,7 +140,7 @@
               >
             </li>
             <li class="menu-item-cards">
-              <a class="link" href=""
+              <a class="link servise-cards" href=""
                 ><img
                   src="./images/a1.jpg"
                   alt="Screen Illustrations"
@@ -154,7 +154,7 @@
               >
             </li>
             <li class="menu-item-cards">
-              <a class="link" href="">
+              <a class="link servise-cards" href="">
                 <img
                   src="./images/a3.jpg"
                   alt="Online Courses"
@@ -169,7 +169,7 @@
             </li>
 
             <li class="menu-item-cards">
-              <a class="link" href="">
+              <a class="link servise-cards" href="">
                 <img
                   src="./images/b1.jpg"
                   alt="Instagram Stories Concept"
@@ -183,7 +183,7 @@
               >
             </li>
             <li class="menu-item-cards">
-              <a class="link" href="">
+              <a class="link servise-cards" href="">
                 <img
                   src="./images/b2.jpg"
                   alt="Organic Food"
@@ -197,7 +197,7 @@
               >
             </li>
             <li class="menu-item-cards">
-              <a class="link" href="">
+              <a class="link servise-cards" href="">
                 <img
                   src="./images/b3.jpg"
                   alt="Fresh Coffee"
@@ -227,6 +227,7 @@
               digital marketing & growth solutions.
             </p>
           </div>
+
           <div class="social-media">
             <p class="text-footer-media">Social media</p>
             <ul class="social-list-footer list">
