--- a/portfolio.html
+++ b/portfolio.html
@@ -42,12 +42,12 @@
         </nav>
         <address class="adress">
           <ul class="menu list">
-            <li class="menu-item">
+            <li class="menu-item-header">
               <a class="adress-list link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="menu-item">
+            <li class="menu-item-header">
               <a class="adress-list link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
